fixed alignment/black bar ish

--- a/PetProjectstyle.css
+++ b/PetProjectstyle.css
@@ -15,7 +15,7 @@
 
   body {
  background-image: url("lowqualphoto.jpg"); /* The image used */
-  background-color: #000000; /* Used if the image is unavailable */
+  background-color: #619C62; /* Used if the image is unavailable */
   height: 100%; /* You must set a specified height */
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
